--- a/css/style.css
+++ b/css/style.css
@@ -18,3 +18,11 @@
 .header img{
     margin: 15px;
 }
+
+.container_banner{
+    width: 100%;
+    height: 557px;
+    background-image: url('../assets/header_bg.png');
+    background-size: cover;
+    background-position: center;
+}
