--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,14 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: "Open Sans";
 }
+
+html, body{
+    height: 100%;
+}
+
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
 
 .center{
     width: 1280px;
@@ -25,4 +32,68 @@
     background-image: url('../assets/header_bg.png');
     background-size: cover;
     background-position: center;
+}
+
+.container_banner > .center{
+    height: 100%;
+}
+
+.form{
+    padding: 20px;
+    width: 400px;
+    height: calc(100% + 30px);
+    position: relative;
+    top: -15px;
+    border: 8px solid #CCCCCC;
+    background-color: white;
+    float: right;
+}
+
+.form h2{
+    text-align: center;
+    font-weight: 300;
+    color: #999999;
+    font-size: 20px;
+}
+
+.input_container{
+    margin-top: 20px;
+}
+
+.input_container span,.form p{
+    display: inline-block;
+    width: 100%;
+    color: #BBBBBB;
+    font-size: 15px;
+    font-weight: bold;
+}
+
+.input_container input[type="text"]{
+    margin-top: 5px;
+    width: 344px;
+    height: 55px;
+    border: 1px solid #CCCCCC;
+}
+
+.form .input_submit_container{
+    text-align: center;
+}
+
+.form p{
+    margin: 20px 0;
+}
+
+.input_submit_container input[type=submit]{
+    color: white;
+    font-size: 25px;
+    width: 280px;
+    height: 56px;
+    background-color: #363A6D;
+    border: 0;
+    border-bottom: 5px solid #4A5097;
+    cursor: pointer;
+}
+
+.input_submit_container input[type=submit]:hover{
+    background-color: #323665;
 }
