finalizado a estilização do banner

--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ html, body{
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
 
 .center{
-    width: 1280px;
+    width: 1200px;
     margin: 0 auto;
 }
 
@@ -44,7 +44,8 @@ html, body{
     height: calc(100% + 30px);
     position: relative;
     top: -15px;
-    border: 8px solid #CCCCCC;
+    border: 8px solid rgba(120, 120, 120, 0.5);
+    background-clip: padding-box;
     background-color: white;
     float: right;
 }
@@ -80,7 +81,7 @@ html, body{
 }
 
 .form p{
-    margin: 20px 0;
+    margin: 50px 0;
 }
 
 .input_submit_container input[type=submit]{
@@ -96,4 +97,22 @@ html, body{
 
 .input_submit_container input[type=submit]:hover{
     background-color: #323665;
+}
+
+.container_list{
+    padding: 30px;
+    margin-top: 40px;
+    float: left;
+    width: 619px;
+    height: 270px;
+    background-color: rgba(33, 35, 67, 0.7);
+}
+
+.container_list ul{
+    list-style-position: inside;
+}
+
+.container_list ul li{
+    margin-top: 15px;
+    color: white;
 }
