--- a/css/style.css
+++ b/css/style.css
@@ -14,12 +14,14 @@ html, body{
 .center{
     width: 1200px;
     margin: 0 auto;
+    padding: 0 2%;
 }
 
 .header{
     width: 100%;
     height: 60px;
     background-color: #212343;
+    min-width: 1200px;
 }
 
 .header img{
@@ -32,6 +34,7 @@ html, body{
     background-image: url('../assets/header_bg.png');
     background-size: cover;
     background-position: center;
+    min-width: 1200px;
 }
 
 .container_banner > .center{
@@ -115,4 +118,65 @@ html, body{
 .container_list ul li{
     margin-top: 15px;
     color: white;
+}
+
+.container_conteudo{
+    min-width: 1200px;
+    padding:40px 0;
+    background-color: #DDDDDD;
+    text-align: center;
+}
+
+.container_conteudo h2{
+    font-weight: normal;
+}
+
+.container_conteudo p{
+    width: 698px;
+    display: inline-block;
+    text-align: justify;
+    margin: 20px 0;
+}
+
+.arrow{
+    position: relative;
+    top: 65px;
+    left: calc(50% - 20px );
+    width: 50px;
+    height: 50px;
+    background-image: url("../assets/arrow.png");
+    background-size: 100% 100%;
+}
+
+.section_1{
+    padding: 90px 0;
+}
+
+.section_1 h2{
+    text-align: center;
+    color: #462663;
+    font-weight: normal;
+}
+
+.container_section{
+    margin-top: 40px;
+}
+
+.container_section{
+    text-align: center;
+}
+
+.container_single{
+    float: left;
+    width: 33.333%;
+    padding: 40px;
+}
+
+.container_single p{
+    text-align: justify;
+    padding: 15px 25px;
+}
+
+.container_single img{
+    width: 70px;
 }
