--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@ html, body{
 
 .container_banner{
     width: 100%;
-    height: 557px;
+    height: 395px;
     background-image: url('../assets/header_bg.png');
     background-size: cover;
     background-position: center;
@@ -64,7 +64,7 @@ html, body{
     margin-top: 20px;
 }
 
-.input_container span,.form p{
+.input_container span,.form p, .footer p{
     display: inline-block;
     width: 100%;
     color: #BBBBBB;
@@ -75,7 +75,7 @@ html, body{
 .input_container input[type="text"]{
     margin-top: 5px;
     width: 344px;
-    height: 55px;
+    height: 45px;
     border: 1px solid #CCCCCC;
 }
 
@@ -84,14 +84,14 @@ html, body{
 }
 
 .form p{
-    margin: 50px 0;
+    margin: 10px 0;
 }
 
 .input_submit_container input[type=submit]{
     color: white;
     font-size: 25px;
-    width: 280px;
-    height: 56px;
+    width: 250px;
+    height: 38px;
     background-color: #363A6D;
     border: 0;
     border-bottom: 5px solid #4A5097;
@@ -122,9 +122,10 @@ html, body{
 
 .container_conteudo{
     min-width: 1200px;
-    padding:40px 0;
+    padding:30px 0;
     background-color: #DDDDDD;
     text-align: center;
+    height: 190px;
 }
 
 .container_conteudo h2{
@@ -140,7 +141,7 @@ html, body{
 
 .arrow{
     position: relative;
-    top: 65px;
+    top: 255px;
     left: calc(50% - 20px );
     width: 50px;
     height: 50px;
@@ -149,18 +150,15 @@ html, body{
 }
 
 .section_1{
-    padding: 90px 0;
+    padding: 30px 0;
 }
 
-.section_1 h2{
+.section_1 h3{
     text-align: center;
     color: #462663;
     font-weight: normal;
 }
 
-.container_section{
-    margin-top: 40px;
-}
 
 .container_section{
     text-align: center;
@@ -169,14 +167,33 @@ html, body{
 .container_single{
     float: left;
     width: 33.333%;
-    padding: 40px;
+    padding: 20px;
 }
 
-.container_single p{
+.container_single p{    
+    font-size: 15px;
     text-align: justify;
     padding: 15px 25px;
 }
 
 .container_single img{
-    width: 70px;
+    width: 60px;
+    height: 60px;
+}
+
+
+.clear{
+    clear: both;
+}
+
+.footer{
+    padding: 30px 0;
+    border-top: 4px solid #999999;
+    display: inline-block;
+    width: 100%;
+}
+
+.footer p{
+    margin-top: 10px;
+    text-align: center;
 }
