--- a/css/style.css
+++ b/css/style.css
@@ -12,16 +12,17 @@ html, body{
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
 
 .center{
-    width: 1200px;
+    max-width: 1280px;
+    width: 100%;
     margin: 0 auto;
     padding: 0 2%;
 }
 
 .header{
     width: 100%;
+    padding: 0 2%;
     height: 60px;
     background-color: #212343;
-    min-width: 1200px;
 }
 
 .header img{
@@ -30,11 +31,11 @@ html, body{
 
 .container_banner{
     width: 100%;
+    padding: 0 2%;
     height: 395px;
     background-image: url('../assets/header_bg.png');
     background-size: cover;
     background-position: center;
-    min-width: 1200px;
 }
 
 .container_banner > .center{
@@ -121,8 +122,7 @@ html, body{
 }
 
 .container_conteudo{
-    min-width: 1200px;
-    padding:30px 0;
+    padding:30px 2%;
     background-color: #DDDDDD;
     text-align: center;
     height: 190px;
@@ -133,7 +133,8 @@ html, body{
 }
 
 .container_conteudo p{
-    width: 698px;
+    width: 100%;
+    max-width: 650px;
     display: inline-block;
     text-align: justify;
     margin: 20px 0;
@@ -141,16 +142,16 @@ html, body{
 
 .arrow{
     position: relative;
-    top: 255px;
+    bottom: calc(100% + 50%);
     left: calc(50% - 20px );
     width: 50px;
     height: 50px;
     background-image: url("../assets/arrow.png");
-    background-size: 100% 100%;
+    background-size: 100%;
 }
 
 .section_1{
-    padding: 30px 0;
+    padding: 30px 2%;
 }
 
 .section_1 h3{
@@ -181,13 +182,12 @@ html, body{
     height: 60px;
 }
 
-
 .clear{
     clear: both;
 }
 
 .footer{
-    padding: 30px 0;
+    padding: 30px 2%;
     border-top: 4px solid #999999;
     display: inline-block;
     width: 100%;
@@ -196,4 +196,46 @@ html, body{
 .footer p{
     margin-top: 10px;
     text-align: center;
+}
+
+@media screen and (max-width: 1120px) {
+    .header{
+        text-align: center;
+    }
+
+    .container_banner{
+        padding: 30px 2%;
+        height: auto;
+        text-align: center;
+    }
+
+    .form{
+        max-width: 400px;
+        width: 90%;
+        display: inline-block;
+        top: 0;
+        float: none;
+        margin-top: 30px;
+    }
+
+    .container_list{
+        max-width: 619px;
+        width: 100%;
+        display: inline-block;
+        float: none;
+    }
+
+    .container_single{
+        display: inline-block;
+        float: none;
+        width: 100%;
+        max-width: 600px;
+        text-align: center;
+    }
+}
+
+@media screen and (max-width: 605px) {
+    .arrow{
+        bottom: calc(100% + 65%);
+    }
 }
